# CascadeEngine

./: .clang-format  CMakeLists.txt  main.cpp
application/models/: bunny.stl
application/src/: main.cpp
lib/Acorn_Logging/: CMakeLists.txt
lib/Acorn_Logging/include/: acorn_logging.hpp
lib/Acorn_Logging/src/: log_message.hpp  logger.cpp  logger.hpp
lib/CascadeCore/: CMakeLists.txt
lib/CascadeCore/src/: application.cpp  application.hpp  event_manager.cpp  event_manager.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
lib/CascadeEngine/: CMakeLists.txt
lib/CascadeEngine/include/: cascade_engine.hpp
lib/CascadeEngine/src/: entry_point.cpp
lib/CascadeGraphics/: CMakeLists.txt
lib/CascadeGraphics/include/: cascade_graphics.hpp  cascade_graphics_debug.hpp
lib/CascadeGraphics/src/: camera.cpp  camera.hpp  cascade_graphics.cpp  debug_tools.cpp  debug_tools.hpp  vulkan_header.hpp
lib/CascadeGraphics/src/Data_Types/: matrix_2x2.hpp  matrix_3x3.hpp  vector_2.hpp  vector_3.hpp  vector_4.hpp
lib/CascadeGraphics/src/Shaders/: render.comp
lib/CascadeGraphics/src/VulkanWrapper/: command_buffer_manager.cpp  command_buffer_manager.hpp  descriptor_set_manager.cpp  descriptor_set_manager.hpp  device_wrapper.cpp  device_wrapper.hpp  instance_wrapper.cpp  instance_wrapper.hpp  physical_device_wrapper.cpp  physical_device_wrapper.hpp  pipeline_manager.cpp  pipeline_manager.hpp  pipeline_wrapper.cpp  pipeline_wrapper.hpp  queue_wrapper.cpp  queue_wrapper.hpp  resource_grouping_manager.cpp  resource_grouping_manager.hpp  shader_manager.cpp  shader_manager.hpp  storage_manager.cpp  storage_manager.hpp  surface_wrapper.cpp  surface_wrapper.hpp  swapchain_wrapper.cpp  swapchain_wrapper.hpp  synchronization_manager.cpp  synchronization_manager.hpp  validation_layer_wrapper.cpp  validation_layer_wrapper.hpp
lib/CascadeLogging/: CMakeLists.txt
lib/CascadeLogging/include/: cascade_logging.hpp
lib/CascadeLogging/src/: cascade_logging.cpp  log_message.hpp  log_stream.cpp  log_stream.hpp  logger.cpp  logger.hpp
lib/Cascade_Core/: CMakeLists.txt
lib/Cascade_Core/include/: cascade.hpp  cascade_engine.hpp
lib/Cascade_Core/src/: application.cpp  application.hpp  application_factory.cpp  application_factory.hpp  engine_thread.cpp  engine_thread.hpp  engine_thread_manager.cpp  engine_thread_manager.hpp  entry.cpp  entry.hpp  event_manager.cpp  event_manager.hpp  renderer.cpp  renderer.hpp  thread.cpp  thread.hpp  thread_manager.cpp  thread_manager.hpp  win32_window.cpp  win32_window.hpp  win32_window_factory.cpp  win32_window_factory.hpp  window.cpp  window.hpp  window_factory.cpp  window_factory.hpp  xcb_window.cpp  xcb_window.hpp  xcb_window_factory.cpp  xcb_window_factory.hpp
lib/Cascade_Graphics/: CMakeLists.txt
lib/Cascade_Graphics/include/: cascade_graphics.hpp  platform_info.hpp  window_info.hpp
lib/Cascade_Graphics/src/: camera.cpp  camera.hpp  debug_tools.cpp  debug_tools.hpp  graphics.cpp  graphics.hpp  graphics_factory.cpp  graphics_factory.hpp  graphics_platform.hpp  object.cpp  object.hpp  object_manager.cpp  object_manager.hpp  platform.hpp  platform_info.cpp  platform_info.hpp  renderer.cpp  renderer.hpp  vulkan_graphics.cpp  vulkan_graphics.hpp  vulkan_graphics_factory.cpp  vulkan_graphics_factory.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  win32_platform_info.cpp  win32_platform_info.hpp  win32_window_info.cpp  win32_window_info.hpp  window_info.cpp  window_info.hpp  window_information.hpp  window_platform.hpp  xcb_platform_info.cpp  xcb_platform_info.hpp  xcb_window_info.cpp  xcb_window_info.hpp
lib/Cascade_Graphics/src/Data_Types/: matrix_2x2.hpp  matrix_3x3.hpp  matrix_4x4.hpp  vector_2.hpp  vector_3.hpp  vector_4.hpp
lib/Cascade_Graphics/src/Shaders/: object_generate.comp  render.comp
lib/Cascade_Graphics/src/Vulkan_Backend/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  descriptor.cpp  descriptor.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  physical_device.cpp  physical_device.hpp  physical_device_selector.cpp  physical_device_selector.hpp  queue_data.hpp  queue_selector.cpp  queue_selector.hpp  semaphore.cpp  semaphore.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  swapchain_builder.cpp  swapchain_builder.hpp  vkresult_translator.cpp  vkresult_translator.hpp  vulkan_header.hpp  win32_surface.cpp  win32_surface.hpp  (+2 more)
lib/Cascade_Graphics/src/Vulkan_Backend/Shaders/: render.comp
lib/Cascade_Graphics/src/Vulkan_Wrapper/: command_buffer_manager.cpp  command_buffer_manager.hpp  debug_tools.cpp  debug_tools.hpp  descriptor_set_manager.cpp  descriptor_set_manager.hpp  device_wrapper.cpp  device_wrapper.hpp  identifier.hpp  instance_wrapper.cpp  instance_wrapper.hpp  logical_device_wrapper.cpp  logical_device_wrapper.hpp  physical_device_wrapper.cpp  physical_device_wrapper.hpp  pipeline_manager.cpp  pipeline_manager.hpp  queue_manager.cpp  queue_manager.hpp  queue_wrapper.cpp  queue_wrapper.hpp  resource_grouping_manager.cpp  resource_grouping_manager.hpp  shader_manager.cpp  shader_manager.hpp  storage_manager.cpp  storage_manager.hpp  storage_manager_resource_id.hpp  surface_wrapper.cpp  surface_wrapper.hpp  swapchain_wrapper.cpp  swapchain_wrapper.hpp  synchronization_manager.cpp  synchronization_manager.hpp  validation_layer_wrapper.cpp  validation_layer_wrapper.hpp  vulkan_graphics.cpp  vulkan_graphics.hpp
lib/Cascade_Logging/: CMakeLists.txt
lib/Cascade_Logging/include/: cascade_logging.hpp
lib/Cascade_Logging/src/: log_message.hpp  log_stream.cpp  log_stream.hpp  logger.cpp  logger.hpp
src/: main.cpp
